--- a/css/styles.css
+++ b/css/styles.css
@@ -10,4 +10,168 @@
 
 body {
   font-family: 'Poppins', sans-serif;
+  font-weight: 600;
+}
+
+h1 {
+  font-size: 3.2em;
+}
+p {
+  font-size: 1em;
+}
+
+button {
+  font-size: 1em;
+  font-weight: 600;
+}
+
+/* Variables */
+:root {
+  --text-primary: #3a3a3a;
+  --text-secondary: #e02c6d;
+}
+
+/* Globals[START] */
+
+/* Flex */
+.flex {
+  display: flex;
+}
+.flex-item {
+  /* flex: 1; */
+}
+.items-center {
+  align-items: center;
+}
+.justify-center {
+  justify-content: center;
+}
+.justify-between {
+  justify-content: space-between;
+}
+
+/* Text */
+.text-primary {
+  color: var(--text-primary);
+}
+.text-secondary {
+  color: var(--text-secondary);
+}
+
+/* Height/ Width */
+.h-100 {
+  height: 100vh;
+}
+
+.w-90 {
+  max-width: 90%;
+}
+.w-85 {
+  max-width: 85%;
+}
+.w-80 {
+  max-width: 80%;
+}
+
+/* Margin/ Padding */
+.m-auto {
+  margin: 0 auto;
+}
+.mt-90 {
+  margin-top: 90px;
+}
+.mt-30 {
+  margin-top: 30px;
+}
+.mt-20 {
+  margin-top: 20px;
+}
+.mt-16 {
+  margin-top: 16px;
+}
+
+.pt-30 {
+  padding-top: 30px;
+}
+
+/* Button */
+.btn {
+  padding: 13px 25px;
+  border: none;
+  border-radius: 30px;
+}
+.btn i {
+  padding: 0 10px;
+}
+.btn-primary {
+  color: white;
+  background-color: var(--text-secondary);
+}
+
+.btn:hover {
+  color: rgb(247, 238, 238);
+  background-color: #c7235f;
+}
+
+.btn i {
+  transition: all 0.3s ease-in-out;
+}
+
+.btn:hover i {
+  transform: translateX(50%);
+}
+
+/* Globals[END]  */
+
+/* Specific styles */
+
+/* Header */
+.header-container {
+}
+
+/* Nav */
+#brand {
+  font-size: 1.5em;
+  font-weight: 700;
+}
+.menu ul li {
+  list-style: none;
+  color: var(--text-primary);
+  padding-right: 25px;
+}
+.menu ul li a {
+  text-decoration: none;
+  color: var(--text-primary);
+}
+.menu ul li a:hover {
+  color: #8f8f8f;
+}
+
+/* Start Journey */
+.header-image {
+  background-image: url('../images/circle-design.svg');
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  transition: all 0.3s ease-in-out;
+}
+
+.header-image:hover {
+  transform: scale(1.02);
+  opacity: 0.9;
+}
+
+/* Animation */
+@keyframes animate-text {
+  0% {
+    opacity: 0;
+    margin-left: -30px;
+  }
+  100% {
+    opacity: 1;
+    margin-left: 0;
+  }
+}
+#start-journey h1 {
+  animation: animate-text 1s ease-in-out;
 }
