--- a/css/styles.css
+++ b/css/styles.css
@@ -400,16 +400,19 @@ footer .social img {
 footer .social img:hover {
   opacity: 0.7;
 }
+/* Specific Styles[END] */
 
 /* Media Queries */
 
 @media screen and (max-width: 2000px) {
+  /* Popular Products */
   .grid {
     grid-template-columns: repeat(3, 1fr);
   }
 }
 
 @media screen and (max-width: 1650px) {
+  /* Featured */
   #featured h2 {
     font-size: 1.5em;
   }
