--- a/css/styles.css
+++ b/css/styles.css
@@ -165,7 +165,7 @@ button {
 .btn {
   padding: 13px 25px;
   border: none;
-
+  cursor: pointer;
   box-shadow: 0px 3px 5px 1px rgba(27, 27, 27, 0.3);
 }
 .btn-radius-30 {
@@ -209,6 +209,9 @@ button {
   font-size: 1.5em;
   font-weight: 700;
 }
+#brand:hover {
+  cursor: pointer;
+}
 .menu ul li {
   list-style: none;
   color: var(--text-primary);
@@ -234,6 +237,7 @@ button {
 .header-image:hover {
   transform: scale(1.02);
   opacity: 0.9;
+  cursor: pointer;
 }
 
 /* Animation */
@@ -286,6 +290,9 @@ hr:after {
 #associated-companies .flex {
   flex-flow: row wrap;
 }
+#associated-companies .flex-item {
+  cursor: pointer;
+}
 
 /* Collection items */
 .collection-items {
@@ -297,7 +304,9 @@ hr:after {
   width: 100%;
   box-shadow: 0px 0px 10px 2px rgba(182, 181, 181, 0.2);
 }
-
+.collection-items .item:hover {
+  cursor: pointer;
+}
 .collection-items h2,
 .collection-items p {
   font-weight: 500;
@@ -337,6 +346,10 @@ hr:after {
 
 .collection-items .item-image > img {
   width: 100%;
+}
+
+.see-more:hover {
+  cursor: pointer;
 }
 
 /* Featured */
